image flip works. Now need to fix box widths on mobile

--- a/music/static/music/css/homepage.css
+++ b/music/static/music/css/homepage.css
@@ -6,16 +6,17 @@
     margin-bottom: 30px;
 }
 .volume_box{
-	/*height: 300px;*/
-	width: 300px;
+	height: 300px;
+	/*width: 300px;*/
 	color: white;
 	background-size: cover;
 }
 .volume_box_info{
 	position: absolute;
-	left: 50%;
-	top: 5%;
-	transform: translate(-50%, -50%)
+	left: 15%;
+	top: 12%;
+	width: 70%;
+	z-index: 10;
 }
 .volume_box_info > h3 {
 	font-size: 35px;
@@ -23,6 +24,25 @@
 
 .volume_box_composer {
 	font-size: 35px;
+}
+
+.pickgradient{
+  position:relative;
+  display:inline-block;
+}
+.pickgradient:after {
+  content:'';
+  position:absolute;
+  left:0; top:0;
+  width:100%; height:100%;
+  display:inline-block;
+  background: -moz-linear-gradient(top, rgba(0,0,0,0) 0%, rgba(0,0,0,0.65) 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,0.65)), color-stop(100%,rgba(0,0,0,0))); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top, rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top, rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(top, rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%); /* IE10+ */
+  background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a6000000', endColorstr='#00000000',GradientType=0 ); /* IE6-9 */
 }
 
 .volume_coming_soon {
@@ -35,11 +55,14 @@
 .image_box {
 	width: 100%;
 	height: 300px;
-	width: 300px;
-	filter: brightness(30%);
+	width: 330px;
 }
 .vol_pos_relative { 
-	position: relative;
+	/*position: relative;*/
+	/*color: #B47B27;*/
+}
+.volume_box_composer, .volume_coming_soon {
+	color: #fff;
 }
 @media (max-width: 767px) {
 	.col_vol_box {
